<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_margin"
        android:layout_marginTop="@dimen/space_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@string/name"
            android:src="@drawable/ic_person"
            android:tint="@color/label_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginLeft="@dimen/content_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginStart="@dimen/content_margin"
            android:orientation="vertical">

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_name" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:contentDescription="@string/phone"
            android:src="@drawable/ic_phone"
            android:tint="@color/label_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginLeft="@dimen/content_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginStart="@dimen/content_margin"
            android:orientation="vertical">

            <TextView
                style="@style/Label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/tv_phone"
                style="@style/Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test_phone" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
